pocs/kust/apps/base/java-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-app
  labels:
    toolkit.fluxcd.io/tenant: dev-team
